Add css styling for forms, clean up code

--- a/index.html
+++ b/index.html
@@ -13,8 +13,19 @@
 
       <form id="baseform">
         <div class="form-group">
-          <label for="base">Enter the base you wish to decode:</label>
-          <input id="base" type="text" pattern="[1-9]*" required>
+          <label for="base">Select the base you wish to decode:</label>
+          <select class="form" id="base" required>
+            <option></option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
+          </select>
         </div>
         <button type="submit" class="btn btn-primary">Set base!</button>
       </form>
