Change title and heading

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Binary Decoder</title>
+    <title>Number Decoder</title>
   </head>
   <body>
     <div class="container">
-      <h1>Binary Decoder</h1>
-
+      <h1>Number Decoder</h1>
       <form id="baseform">
         <div class="form-group">
           <label for="base">Select the base you wish to decode:</label>
@@ -29,16 +28,14 @@
         </div>
         <button type="submit" class="btn btn-primary">Set base!</button>
       </form>
-
       <form id="number">
         <label for="input">Enter the number to decode:</label>
         <div class="form-group" id="inputdiv">
         </div>
         <button type="submit" class="btn btn-primary">Decode!</button>
       </form>
-
       <div id="result">
-
+        <!-- result will print here -->
       </div>
     </div>
   </body>
